--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3",
     "react-native-maps": "0.28.1",
-    "react-native-webview": "11.13.0"
+    "react-native-webview": "11.13.0",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
